HLMS-002 - PUT application by id, update docs, remove redundant deps
