# sectors-api/src/main/java/com/helmes/sectorsapi/dto/request/UpdateApplicationDTO.java
@@ -1,0 +1,18 @@
+package com.helmes.sectorsapi.dto.request;
+
+import com.fasterxml.jackson.annotation.JsonInclude;
+import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.NotEmpty;
+import jakarta.validation.constraints.Size;
+
+import java.util.Set;
+
+@JsonInclude(JsonInclude.Include.NON_NULL)
+public record UpdateApplicationDTO(
+    @NotBlank(message = "Name cannot be empty")
+    @Size(min = 3, max = 100)
+    String applicantName,
+
+    @NotEmpty(message = "Selected sectors cannot be empty")
+    Set<Long> sectorIds
+) {}
